Drive onsite repositories.

+++
*** Gateway methods in Tramp have been removed.  Instead, the Tramp
manual documents how to configure ssh and PuTTY accordingly.

+++
*** Setting the "ENV" environment variable in
'tramp-remote-process-environment' enables reading of shell
initialization files.

---
** 'auto-revert-use-notify' is set back to t in 'global-auto-revert-mode'.

** CSS mode

---
*** Support for completing attribute values, at-rules, bang-rules,
HTML tags, classes and IDs using the 'completion-at-point' command.
Completion candidates for HTML classes and IDs are retrieved from open
HTML mode buffers.

---
*** CSS mode now binds 'C-h S' to a function that will show
information about a CSS construct (an at-rule, property, pseudo-class,
pseudo-element, with the default being guessed from context).  By
default the information is looked up on the Mozilla Developer Network,
but this can be customized using 'css-lookup-url-format'.

+++
** Emacs now supports character name escape sequences in character and
string literals.  The syntax variants \N{character name} and
\N{U+code} are supported.

+++
** Prog mode has some support for multi-mode indentation.
This allows better indentation support in modes that support multiple
programming languages in the same buffer, like literate programming
environments or ANTLR programs with embedded Python code.

A major mode can provide indentation context for a sub-mode through
the 'prog-indentation-context' variable.  To support this, modes that
provide indentation should use 'prog-widen' instead of 'widen' and
'prog-first-column' instead of a literal zero.  See the node
"Mode-Specific Indent" in the ELisp manual for more details.

** ERC

*** New variable 'erc-default-port-tls' used to connect to TLS IRC
servers.

** URL

+++
*** The new function 'url-cookie-delete-cookie' can be used to
programmatically delete all cookies, or cookies from a specific
domain.

+++