@@ -624,6 +624,9 @@ initialization files.
 ---
 ** 'auto-revert-use-notify' is set back to t in 'global-auto-revert-mode'.
 
+---
+** JS mode now sets 'comment-multi-line' to t.
+
 ** CSS mode
 
 ---
